--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <noscript>Vous devez avoir JavaScript activé pour pouvoir affiché ce site.</noscript>
+  <noscript>Vous devez avoir JavaScript activé pour pouvoir afficher ce site.</noscript>
   <div id="root"></div>
 </body>
 
