--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Vous souhaitez louer un appartement ? N'hésitez plus, visitez notre site pour trouver l'appartement qui vous
   convient." />
-  <title>Kasa - Location d'appartements entre particulier</title>
+  <title>Kasa - Location d'appartements entre particuliers</title>
 </head>
 
 <body>
